ci: Added Github Actions configuration for releases

--- a/.editorconfig
+++ b/.editorconfig
@@ -38,6 +38,10 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+[.semrelrc]
+indent_style = tab
+indent_size = 4
+
 [*.{yml,yaml}]
 indent_style = space
 indent_size = 2
