--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -3,20 +3,28 @@ name: Continuous Integration
 
 on:
   pull_request:
-    branches:
-      - $default-branch
 
 jobs:
-  CI:
+  verify:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: jdx/mise-action@v2
+
       - name: pre-commit
         shell: bash
         run: pre-commit run --show-diff-on-failure --color=always --all-files
+
       - name: Tests
         shell: bash
         run: gotestsum --format=github-actions -- ./... -race
 
-      # TODO: docker image
+      - uses: docker/setup-buildx-action@v3
+
+      - name: Docker build
+        uses: docker/build-push-action@v6
+        with:
+          tags: durandj/ek:ci
+          push: false
