--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@
 name: Release new version
 
 on:
-  push:
+  create:
     tags:
 
 jobs:
@@ -26,6 +26,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+            latest
 
       - name: Docker login
         uses: docker/login-action@v3
