fix: Switched to using PAT token for releases
It turns out that when you create a release using an automation that
Github won't trigger additional workflows to "prevent an infinite loop".
The fix is to use a PAT (Personal Access Token) instead of the provided
Github Token.

https://github.com/orgs/community/discussions/25281

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,18 @@ jobs:
 
   tag-release:
     runs-on: ubuntu-latest
+    environment: release
+
     needs: test
+
     permissions:
       contents: write
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: go-semantic-release/action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
